Feature: add paste api
