# docs/swagger.json
@@ -16,6 +16,52 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/paste": {
+            "post": {
+                "description": "Create a paste",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Paste"
+                ],
+                "summary": "create a paste",
+                "parameters": [
+                    {
+                        "description": "Create Paste Request",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/rest.CreatePasteRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/rest.PasteResponseSuccess"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/rest.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/rest.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/shorten": {
             "post": {
                 "description": "Shorten a URL",
@@ -64,6 +110,35 @@
         }
     },
     "definitions": {
+        "rest.CreatePasteRequest": {
+            "type": "object",
+            "required": [
+                "content",
+                "title"
+            ],
+            "properties": {
+                "content": {
+                    "type": "string",
+                    "minLength": 5,
+                    "example": "Your content"
+                },
+                "duration": {
+                    "type": "integer",
+                    "minimum": 1,
+                    "example": 3
+                },
+                "paste_id": {
+                    "type": "string",
+                    "minLength": 5,
+                    "example": "optional"
+                },
+                "title": {
+                    "type": "string",
+                    "minLength": 5,
+                    "example": "Title"
+                }
+            }
+        },
         "rest.CreateShortURLRequest": {
             "type": "object",
             "required": [
@@ -77,6 +152,7 @@
                 },
                 "duration": {
                     "type": "integer",
+                    "minimum": 1,
                     "example": 3
                 },
                 "original_url": {
@@ -96,11 +172,42 @@
                 }
             }
         },
+        "rest.PasteResponseSuccess": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/rest.createPasteResponse"
+                }
+            }
+        },
         "rest.ShortURLResponseSuccess": {
             "type": "object",
             "properties": {
                 "data": {
                     "$ref": "#/definitions/rest.createShortURLResponse"
+                }
+            }
+        },
+        "rest.createPasteResponse": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "created": {
+                    "type": "string"
+                },
+                "expires": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
                 }
             }
         },
